--- a/dominodo/app/plugins/bootstrap/css/bootstrap.css
+++ b/dominodo/app/plugins/bootstrap/css/bootstrap.css
@@ -5073,7 +5073,7 @@ a.label:focus {
   background-color: #c9302c;
 }
 .badge {
-  display: inline-block;
+  display: inline-flex;
   min-width: 10px;
   padding: 3px 7px;
   font-size: 12px;
