--- a/domino-ui-demo/css/style.css
+++ b/domino-ui-demo/css/style.css
@@ -7771,3 +7771,8 @@ a.disabled {
 input[type=email].disabled-suggestions::-webkit-calendar-picker-indicator {
     display: none;
 }
+
+/*========================= Telephone box ======================== */
+input[type=tel].disabled-suggestions::-webkit-calendar-picker-indicator {
+    display: none;
+}
