--- a/domino-ui-demo/css/themes/all-themes.css
+++ b/domino-ui-demo/css/themes/all-themes.css
@@ -246,12 +246,8 @@
   .theme-indigo .navbar-brand:focus {
     color: #fff; }
 
-.theme-indigo .nav > li > a {
+.theme-indigo .nav:not(.nav-tabs) > li > a {
   color: #fff; }
-  .theme-indigo .nav > li > a:hover {
-    background-color: transparent; }
-  .theme-indigo .nav > li > a:focus {
-    background-color: transparent; }
 
 .theme-indigo .nav .open > a {
   background-color: transparent; }
