--- a/domino-ui-demo/css/style.css
+++ b/domino-ui-demo/css/style.css
@@ -1451,7 +1451,82 @@ body.modal-open {
 }
 
 .padding-0 {
-    padding: 0;
+    padding: 0px;
+}
+.padding-5 {
+    padding: 5px;
+}
+.padding-10 {
+    padding: 10px;
+}
+.padding-15 {
+    padding: 15px;
+}
+.padding-20 {
+    padding: 20px;
+}
+.padding-25 {
+    padding: 25px;
+}
+.padding-30 {
+    padding: 30px;
+}
+.padding-35 {
+    padding: 35px;
+}
+.padding-40 {
+    padding: 40px;
+}
+.padding-45 {
+    padding: 45px;
+}
+.padding-50 {
+    padding: 50px;
+}
+.padding-55 {
+    padding: 55px;
+}
+.padding-60 {
+    padding: 60px;
+}
+.padding-65 {
+    padding: 65px;
+}
+.padding-70 {
+    padding: 70px;
+}
+.padding-75 {
+    padding: 75px;
+}
+.padding-80 {
+    padding: 80px;
+}
+.padding-85 {
+    padding: 85px;
+}
+.padding-90 {
+    padding: 90px;
+}
+.padding-95 {
+    padding: 95px;
+}
+.padding-100 {
+    padding: 100px;
+}
+.padding-105 {
+    padding: 105px;
+}
+.padding-110 {
+    padding: 110px;
+}
+.padding-115 {
+    padding: 115px;
+}
+.padding-120 {
+    padding: 120px;
+}
+.padding-125 {
+    padding: 125px;
 }
 
 .font-6 {
