--- a/domino-ui-demo/plugins/bootstrap/css/bootstrap.css
+++ b/domino-ui-demo/plugins/bootstrap/css/bootstrap.css
@@ -4878,21 +4878,21 @@ fieldset[disabled] .navbar-inverse .btn-link:focus {
   background-color: #fff;
   border: 1px solid #ddd;
 }
-.pagination > li:first-child > a,
-.pagination > li:first-child > span {
-  margin-left: 0;
-  border-top-left-radius: 4px;
-  border-bottom-left-radius: 4px;
+.pagination .page a{
+  margin-top: 6px;
+  margin-left: 2px;
+  margin-right: 2px;
+  border-radius: 50%;
 }
-.pagination > li:last-child > a,
-.pagination > li:last-child > span {
-  border-top-right-radius: 4px;
-  border-bottom-right-radius: 4px;
+
+.pagination .page.active a{
+  border-radius: 50%;
 }
-.pagination > li > a:hover,
-.pagination > li > span:hover,
-.pagination > li > a:focus,
-.pagination > li > span:focus {
+
+.pagination > .page > a:hover,
+.pagination > .page > span:hover,
+.pagination > .page > a:focus,
+.pagination > .page > span:focus {
   z-index: 2;
   color: #23527c;
   background-color: #eee;
