--- a/domino-ui-demo/css/style.css
+++ b/domino-ui-demo/css/style.css
@@ -1,4 +1,4 @@
-﻿/* Navbar ====================================== */
+﻿﻿﻿/* Navbar ====================================== */
 
 body.modal-open {
     overflow: hidden;
@@ -1453,78 +1453,103 @@ body.modal-open {
 .padding-0 {
     padding: 0px;
 }
+
 .padding-5 {
     padding: 5px;
 }
+
 .padding-10 {
     padding: 10px;
 }
+
 .padding-15 {
     padding: 15px;
 }
+
 .padding-20 {
     padding: 20px;
 }
+
 .padding-25 {
     padding: 25px;
 }
+
 .padding-30 {
     padding: 30px;
 }
+
 .padding-35 {
     padding: 35px;
 }
+
 .padding-40 {
     padding: 40px;
 }
+
 .padding-45 {
     padding: 45px;
 }
+
 .padding-50 {
     padding: 50px;
 }
+
 .padding-55 {
     padding: 55px;
 }
+
 .padding-60 {
     padding: 60px;
 }
+
 .padding-65 {
     padding: 65px;
 }
+
 .padding-70 {
     padding: 70px;
 }
+
 .padding-75 {
     padding: 75px;
 }
+
 .padding-80 {
     padding: 80px;
 }
+
 .padding-85 {
     padding: 85px;
 }
+
 .padding-90 {
     padding: 90px;
 }
+
 .padding-95 {
     padding: 95px;
 }
+
 .padding-100 {
     padding: 100px;
 }
+
 .padding-105 {
     padding: 105px;
 }
+
 .padding-110 {
     padding: 110px;
 }
+
 .padding-115 {
     padding: 115px;
 }
+
 .padding-120 {
     padding: 120px;
 }
+
 .padding-125 {
     padding: 125px;
 }
@@ -4597,11 +4622,30 @@ a.list-group-item:not([class*="bg-"]):not([class*="-success"]):not([class*="-dan
     color: #bbb;
 }
 
+.pagination .disabled a .clickable-icon {
+    cursor: not-allowed;
+}
+
 .pagination li.active a {
     background-color: #2196F3;
     border-radius: 2px;
     -webkit-box-shadow: 0 3px 1px -2px rgba(0, 0, 0, .2), 0 2px 2px 0 rgba(0, 0, 0, .14), 0 1px 5px 0 rgba(0, 0, 0, .12);
     box-shadow: 0 3px 1px -2px rgba(0, 0, 0, .2), 0 2px 2px 0 rgba(0, 0, 0, .14), 0 1px 5px 0 rgba(0, 0, 0, .12);
+}
+
+.pagination .page a {
+    padding: 6px 0px;
+    text-align: center;
+    width: 32px;
+    height: 32px;
+    margin-left: 2px;
+    margin-right: 2px;
+    border-radius: 50%;
+}
+
+.pagination .page-nav a {
+    margin-left: 5px;
+    margin-right: 5px;
 }
 
 .pagination li {
@@ -4623,51 +4667,35 @@ a.list-group-item:not([class*="bg-"]):not([class*="-success"]):not([class*="-dan
     color: #555;
 }
 
-.pagination > li:first-child > a,
-.pagination > li:last-child > a {
-    width: auto;
-    height: 32px;
-    -webkit-border-radius: 0;
-    -moz-border-radius: 0;
-    -ms-border-radius: 0;
-    border-radius: 0;
+.pagination .adv-page-count {
+    margin-left: 10px;
+    margin-right: 10px;
+    line-height: 34px
 }
 
-.pagination > li:first-child > a .material-icons,
-.pagination > li:last-child > a .material-icons {
-    position: relative;
-    bottom: 2px;
-    width: 24px;
+.pagination .page-nav:disabled a .clickable-icon {
+    cursor: not-allowed !important;
 }
 
-.pagination-sm > li:first-child > a,
-.pagination-sm > li:last-child > a {
-    width: 28px;
-    height: 28px;
+.pagination-lg .page-nav a {
+    margin-top: 2px;
 }
 
-.pagination-sm > li:first-child > a .material-icons,
-.pagination-sm > li:last-child > a .material-icons {
-    position: relative;
-    top: -1px;
-    left: -6px;
-    font-size: 20px;
-    width: 20px;
-}
-
-.pagination-lg > li:first-child > a,
-.pagination-lg > li:last-child > a {
-    width: 44px;
-    height: 44px;
-}
-
-.pagination-lg > li:first-child > a .material-icons,
-.pagination-lg > li:last-child > a .material-icons {
+.pagination-lg .page-nav a .material-icons {
     font-size: 30px;
-    position: relative;
-    top: -3px;
-    left: -10px;
-    width: 30px;
+    line-height: 24px;
+    padding-left: 1px;
+}
+
+.pagination-sm .page-nav a .material-icons {
+    font-size: 20px;
+    line-height: 24px;
+    padding-left: 5px;
+}
+
+.pagination-sm .page a {
+    font-size: 12px;
+    line-height: 20px;
 }
 
 /* Media Object ================================ */
@@ -7721,6 +7749,11 @@ a.disabled {
 
 .clickable-icon:HOVER {
     opacity: 0.8;
+    background-color: #efefef;
+}
+
+.clickable-icon:disabled {
+    cursor: not-allowed;
 }
 
 /* =========================== Horizontal spin ======================== */
