--- a/domino-ui-demo/plugins/bootstrap/css/bootstrap.css
+++ b/domino-ui-demo/plugins/bootstrap/css/bootstrap.css
@@ -4870,7 +4870,6 @@ fieldset[disabled] .navbar-inverse .btn-link:focus {
 .pagination > li > span {
   position: relative;
   float: left;
-  padding: 6px 12px;
   margin-left: -1px;
   line-height: 1.42857143;
   color: #337ab7;
@@ -4878,21 +4877,17 @@ fieldset[disabled] .navbar-inverse .btn-link:focus {
   background-color: #fff;
   border: 1px solid #ddd;
 }
-.pagination > li:first-child > a,
-.pagination > li:first-child > span {
-  margin-left: 0;
-  border-top-left-radius: 4px;
-  border-bottom-left-radius: 4px;
+
+
+
+.pagination .page.active a{
+  border-radius: 50%;
 }
-.pagination > li:last-child > a,
-.pagination > li:last-child > span {
-  border-top-right-radius: 4px;
-  border-bottom-right-radius: 4px;
-}
-.pagination > li > a:hover,
-.pagination > li > span:hover,
-.pagination > li > a:focus,
-.pagination > li > span:focus {
+
+.pagination > .page > a:hover,
+.pagination > .page > span:hover,
+.pagination > .page > a:focus,
+.pagination > .page > span:focus {
   z-index: 2;
   color: #23527c;
   background-color: #eee;
@@ -4923,36 +4918,19 @@ fieldset[disabled] .navbar-inverse .btn-link:focus {
 }
 .pagination-lg > li > a,
 .pagination-lg > li > span {
-  padding: 10px 16px;
+  /*padding: 10px 16px;*/
   font-size: 18px;
-  line-height: 1.3333333;
+  /*line-height: 1.3333333;*/
 }
-.pagination-lg > li:first-child > a,
-.pagination-lg > li:first-child > span {
-  border-top-left-radius: 6px;
-  border-bottom-left-radius: 6px;
-}
-.pagination-lg > li:last-child > a,
-.pagination-lg > li:last-child > span {
-  border-top-right-radius: 6px;
-  border-bottom-right-radius: 6px;
-}
+
+
 .pagination-sm > li > a,
 .pagination-sm > li > span {
-  padding: 5px 10px;
+  /*padding: 5px 10px;*/
   font-size: 12px;
-  line-height: 1.5;
+  /*line-height: 1.5;*/
 }
-.pagination-sm > li:first-child > a,
-.pagination-sm > li:first-child > span {
-  border-top-left-radius: 3px;
-  border-bottom-left-radius: 3px;
-}
-.pagination-sm > li:last-child > a,
-.pagination-sm > li:last-child > span {
-  border-top-right-radius: 3px;
-  border-bottom-right-radius: 3px;
-}
+
 .pager {
   padding-left: 0;
   margin: 20px 0;
