--- a/domino-ui-demo/css/domino-ui.css
+++ b/domino-ui-demo/css/domino-ui.css
@@ -1,4 +1,5 @@
 @import url(../font/material-icons.css);
+@import url(./mdi/css/materialdesignicons.css);
 @import url(../plugins/bootstrap/css/bootstrap.css);
 @import url(../plugins/node-waves/waves.css);
 @import url(../plugins/animate-css/animate.css);
