--- a/domino-ui-demo/css/themes/theme-amber.css
+++ b/domino-ui-demo/css/themes/theme-amber.css
@@ -17,7 +17,7 @@
   .theme-amber .navbar-brand:focus {
     color: #fff; }
 
-.theme-amber .nav > li > a {
+.theme-amber .nav:not([class*="nav-tab"]) > li > a {
   color: #fff; }
   .theme-amber .nav > li > a:hover {
     background-color: transparent; }
