--- a/domino-ui-demo/css/themes/theme-black.css
+++ b/domino-ui-demo/css/themes/theme-black.css
@@ -17,7 +17,7 @@
   .theme-black .navbar-brand:focus {
     color: #fff; }
 
-.theme-black .nav > li > a {
+.theme-black .nav:not([class*="nav-tab"]) > li > a {
   color: #fff; }
   .theme-black .nav > li > a:hover {
     background-color: transparent; }
