--- a/domino-ui-demo/css/themes/theme-teal.css
+++ b/domino-ui-demo/css/themes/theme-teal.css
@@ -17,7 +17,7 @@
   .theme-teal .navbar-brand:focus {
     color: #fff; }
 
-.theme-teal .nav > li > a {
+.theme-teal .nav:not([class*="nav-tab"]) > li > a {
   color: #fff; }
   .theme-teal .nav > li > a:hover {
     background-color: transparent; }
