--- a/domino-ui-demo/plugins/waitme/waitMe.css
+++ b/domino-ui-demo/plugins/waitme/waitMe.css
@@ -7,7 +7,7 @@ Github: https://github.com/vadimsva/waitMe
 body.waitMe_container {position:fixed;width:100%;height:100%}
 .waitMe_container .waitMe {position:absolute;top:0;left:0;right:0;bottom:0;z-index:9989;text-align:center;overflow:hidden}
 .waitMe_container .waitMe * {font-family:sans-serif;font-size:14px;font-weight:initial;font-style:initial;line-height:initial;color:initial;text-decoration:initial;text-transform:initial;padding:initial;margin:initial}
-.waitMe_container .waitMe .waitMe_content {position:absolute;left:0;right:0;top:50%;backface-visibility:hidden}
+.waitMe_container .waitMe .waitMe_content {backface-visibility:hidden}
 .waitMe_container .waitMe .waitMe_progress {position:relative;font-size:0}
 .waitMe_container .waitMe .waitMe_progress > div {animation-fill-mode:both;display:inline-block;transform:translateZ(0);backface-visibility:hidden}
 .waitMe_container .waitMe .waitMe_text {position:relative;margin:20px 0 0}
