--- a/dominodoj2cl/dominodo.css
+++ b/dominodoj2cl/dominodo.css
@@ -2,7 +2,7 @@
     border-radius: 24px !important;
     height: 45px !important;
     width: 120px;
-    position: fixed;
+    position: fixed !important;
     right: 16px;
     bottom: 16px;
     z-index: 10;
