--- a/domino-ui-demo/css/style.css
+++ b/domino-ui-demo/css/style.css
@@ -179,19 +179,52 @@ body.modal-open {
     border-radius: 3px;
 }
 
-.slide-out-left{
+
+.sm .sidebar.slide-out-left{
+    left: -100px;
+}
+
+.md .sidebar.slide-out-left{
     left: -300px;
 }
 
-.slide-out-right{
+.lg .sidebar.slide-out-left{
+    left: -400px;
+}
+
+.right-sidebar.slide-out-right{
     right: -300px;
 }
 
-.slide-in-left{
-    left: 0px;
+.panel-open.md.l-fixed .content{
+    margin-left: 315px;
 }
 
-.slide-in-right{
+.md .sidebar{
+    width: 300px;
+}
+
+.panel-open.sm.l-fixed .content{
+    margin-left: 115px;
+}
+
+.sm .sidebar{
+    width: 100px;
+}
+
+.panel-open.lg.l-fixed .content{
+    margin-left: 415px;
+}
+
+.lg .sidebar{
+    width: 400px;
+}
+
+.sidebar.slide-in-left{
+    width: 0px;
+}
+
+.right-sidebar.slide-in-right{
     right: 0px;
 }
 
@@ -3073,22 +3106,31 @@ input[type=range] + .thumb.active .value {
     vertical-align: baseline !important;
 }
 
-.info-box .content {
+.info-box .info-content {
     display: inline-block;
     padding: 7px 10px;
 }
 
-.info-box .content .text {
+.info-box .info-content .text {
     font-size: 13px;
     margin-top: 11px;
+}
+
+.info-box:not([class*="bg-"]) .info-content .text,
+.info-box:not([class*="bg-"]) .info-content .number,
+.info-box-2:not([class*="bg-"]) .info-content .text,
+.info-box-2:not([class*="bg-"]) .info-content .number,
+.info-box-3:not([class*="bg-"]) .info-content .text,
+.info-box-3:not([class*="bg-"]) .info-content .number,
+.info-box-4:not([class*="bg-"]) .info-content .text,
+.info-box-4:not([class*="bg-"]) .info-content .number{
     color: #555;
 }
 
-.info-box .content .number {
+.info-box .info-content .number {
     font-weight: normal;
     font-size: 26px;
     margin-top: -4px;
-    color: #555;
 }
 
 .info-box.hover-zoom-effect .icon {
@@ -3183,22 +3225,20 @@ input[type=range] + .thumb.active .value {
     vertical-align: baseline !important;
 }
 
-.info-box-2 .content {
+.info-box-2 .info-content {
     display: inline-block;
     padding: 7px 10px;
 }
 
-.info-box-2 .content .text {
+.info-box-2 .info-content .text {
     font-size: 13px;
     margin-top: 11px;
-    color: #555;
 }
 
-.info-box-2 .content .number {
+.info-box-2 .info-content .number {
     font-weight: normal;
     font-size: 26px;
     margin-top: -4px;
-    color: #555;
 }
 
 .info-box-2.hover-zoom-effect .icon {
@@ -3297,22 +3337,20 @@ input[type=range] + .thumb.active .value {
     vertical-align: baseline !important;
 }
 
-.info-box-3 .content {
+.info-box-3 .info-content {
     display: inline-block;
     padding: 7px 16px;
 }
 
-.info-box-3 .content .text {
+.info-box-3 .info-content .text {
     font-size: 13px;
     margin-top: 11px;
-    color: #555;
 }
 
-.info-box-3 .content .number {
+.info-box-3 .info-content .number {
     font-weight: normal;
     font-size: 26px;
     margin-top: -4px;
-    color: #555;
 }
 
 .info-box-3.hover-zoom-effect .icon i,
@@ -3405,22 +3443,20 @@ input[type=range] + .thumb.active .value {
     vertical-align: baseline !important;
 }
 
-.info-box-4 .content {
+.info-box-4 .info-content {
     display: inline-block;
     padding: 7px 16px;
 }
 
-.info-box-4 .content .text {
+.info-box-4 .info-content .text {
     font-size: 13px;
     margin-top: 11px;
-    color: #555;
 }
 
-.info-box-4 .content .number {
+.info-box-4 .info-content .number {
     font-weight: normal;
     font-size: 26px;
     margin-top: -4px;
-    color: #555;
 }
 
 .info-box-4.hover-zoom-effect .icon i,
@@ -5889,15 +5925,43 @@ a.list-group-item:not([class*="bg-"]):not([class*="-success"]):not([class*="-dan
 }
 
 /* Dropdown Menu =============================== */
+.dropdown {
+    position: absolute;
+    z-index: 11;
+    background-color: #fff;
+    -webkit-box-shadow: 0 6px 12px rgba(0, 0, 0, .175);
+    box-shadow: 0 6px 12px rgba(0, 0, 0, .175);
+    border-radius: 2px;
+}
+
+.dropdown-search-container {
+    padding: 4px 8px;
+    border-bottom: 1px solid #ddd;
+}
+
+.dropdown-search-box {
+    padding: 5px 8px;
+    border: 0px;
+    width: 100%;
+}
+
 .dropdown-menu {
-    -webkit-border-radius: 0;
-    -moz-border-radius: 0;
-    -ms-border-radius: 0;
-    border-radius: 0;
-    margin-top: -35px !important;
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
     border: none;
-    max-width: 100%;
+    width: 100%;
+    z-index: 11;
+    float: left;
+    padding: 5px 0;
+    margin: 2px 0 0;
+    margin-top: 0px;
+    font-size: 14px;
+    text-align: left;
+    list-style: none;
+    background-color: #fff;
+    -webkit-background-clip: padding-box;
+    background-clip: padding-box;
+    border: 0px;
+    max-height: 300px;
+    overflow-y: auto;
 }
 
 .dropdown-menu .ellipsis {
@@ -6070,7 +6134,6 @@ a.list-group-item:not([class*="bg-"]):not([class*="-success"]):not([class*="-dan
     transition: left 0.5s;
     font-family: "Roboto", sans-serif;
     background: #fdfdfd;
-    width: 300px;
     display: inline-block;
     height: calc(100vh - 70px);
     position: fixed;
@@ -6194,8 +6257,16 @@ a.list-group-item:not([class*="bg-"]):not([class*="-success"]):not([class*="-dan
     font-weight: bold;
 }
 
-.menu .list .header {
+.menu[class*="bg-"] .list li.active > :first-child span,
+.menu[class*="bg-"] .list li.active > :first-child i {
+    opacity: 0.7;
+}
+
+.menu:not([class*="bg-"]) .list .header {
     background: #eee;
+}
+
+.menu .list .header {
     font-size: 12px;
     font-weight: 600;
     padding: 8px 16px;
@@ -6255,8 +6326,11 @@ a.list-group-item:not([class*="bg-"]):not([class*="-success"]):not([class*="-dan
     transform: scale(1);
 }
 
-.menu .list a {
+.menu:not([class*="bg-"]) .list a {
     color: #747474;
+}
+
+.menu .list a {
     position: relative;
     display: inline-flex;
     vertical-align: middle;
@@ -6274,12 +6348,23 @@ a.list-group-item:not([class*="bg-"]):not([class*="-success"]):not([class*="-dan
     right: 15px;
 }
 
+.menu:not([class*="bg-"]) .list a .title {
+    color: #333;
+}
+
 .menu .list a .title {
     margin: 2px 0px 0px 12px;
-    color: #333;
     font-weight: bold;
     font-size: 14px;
     overflow: hidden;
+}
+
+.menu[class*="bg-"] .list li a:hover {
+    opacity: 0.7;
+}
+
+.menu[class*="bg-"] .list li a:hover i{
+    opacity: 0.7;
 }
 
 .menu .tree-leaf a .title {
@@ -6310,19 +6395,22 @@ a.list-group-item:not([class*="bg-"]):not([class*="-success"]):not([class*="-dan
     padding-left: 95px;
 }
 
-.menu .separator a {
-    border-bottom: 1px solid #cccccc;
+.menu .gap{
     width: 100%;
     margin-top: 5px;
     margin-bottom: 5px;
     padding: 0px;
 }
 
+.menu .separator a {
+    border-bottom: 1px solid #cccccc;
+}
+
 .right-sidebar {
     width: 280px;
     height: calc(100vh - 70px);
     position: fixed;
-    right: -300px;
+    right: 0px;
     top: 70px;
     margin-right: 0px;
     background: #fdfdfd;
@@ -7338,10 +7426,6 @@ a.disabled {
     font-weight: 300;
 }
 
-.table-cm-filter .material-icons {
-    font-size: 12px;
-}
-
 .table-search-box {
     background-color: #efefef;
     border-radius: 3px;
@@ -8066,6 +8150,75 @@ input[type=tel].disabled-suggestions::-webkit-calendar-picker-indicator {
     height: 33px;
     position: absolute;
     right: 0px;
+}
+
+/*========================= Select ======================== */
+.select-search-container {
+    padding: 4px 8px;
+}
+
+.select-search-box {
+}
+
+.select-search-box:after {
+    content: '\E8B6';
+        font-family: 'Material Icons';
+        position: absolute;
+        top: 0;
+        left: 10px;
+        font-size: 25px;
+}
+
+
+.select-button {
+    background-color: transparent;
+    width: 100%;
+    z-index: 1;
+    border: 0px;
+    text-align: left;
+    padding: 0;
+}
+
+.select-button[disabled] {
+    cursor: not-allowed;
+    opacity: .65;
+}
+
+.select-button[readonly] {
+    cursor: text;
+    -webkit-user-select: text;
+    -moz-user-select: text;
+    -ms-user-select: text;
+    user-select: text;
+}
+
+.select-option-menu > ul > li > a {
+    padding: 0px;
+}
+
+.select-option {
+    padding: 7px 10px 7px 30px;
+}
+
+.select-option-selected {
+    background-color: rgba(0, 0, 0, 0.075);
+}
+
+.select-option-check-mark {
+    line-height: 25px;
+}
+
+.select-value {
+    width: 100%;
+    text-align: left;
+    position: absolute !important;
+    top: 6px !important;
+    left: 0 !important;
+    padding-right: 40px;
+}
+
+.select-label {
+    cursor: pointer !important;
 }
 
 /* ================ vertical tabs =========================== */
