--- a/domino-ui-demo/css/domino-ui.css
+++ b/domino-ui-demo/css/domino-ui.css
@@ -4,7 +4,6 @@
 @import url(../plugins/node-waves/waves.css);
 @import url(animation/animate.css);
 @import url(../plugins/waitme/waitMe.css);
-@import url(../plugins/bootstrap-select/css/bootstrap-select.css);
 @import url(../plugins/stepper/materialize-stepper.css);
 @import url(materialize.css);
 @import url(grid.css);
@@ -21,5 +20,6 @@
 @import url(modals/modals.css);
 @import url(datepicker/datepicker.css);
 @import url(timepicker/timepicker.css);
+@import url(dropdown/dropdown.css);
 @import url(style.css);
 @import url(colors.css);
